# lib/db/src/schema/index.ts
@@ -19,3 +19,4 @@
 
 export * from "./projects";
 export * from "./userPreferences";
+export * from "./svgDesigns";
